--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  --size-navigation: 97px;
 }
 
 body {
@@ -133,6 +135,11 @@ h3, h4, h5, h6 {
 .hero-with-content {
   background-repeat: no-repeat;
   background-size: 100%;
+  margin-top: var(--size-navigation);
+}
+
+.hero-with-cta {
+  margin-top: var(--size-navigation);
 }
 
 .herocda-confirmation-text {
